--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,6 +1,10 @@
 ---
 # File: config.yml - Consul configuration tasks
 
+- name: Display consul_bind_address
+  debug:
+    msg: "consul_bind_address = {{ consul_bind_address }}"
+
 - name: Create configuration
   copy:
     dest: "{{ config_item.dest }}"
